--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_core: ^1.6.0
   firebase_auth: ^3.1.1 
   firebase_remote_config: ^0.11.0
+  flutter_signin_button: ^2.0.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
