--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   flutter_signin_button: ^2.0.0
   google_sign_in: ^5.1.0
   intl: ^0.17.0
-  
+  flutter_rating_stars: ^1.0.3+4
+  cloud_firestore: ^2.5.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
